--- a/tourcapachica/package.json
+++ b/tourcapachica/package.json
@@ -36,6 +36,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^6.7.0",
     "@supabase/supabase-js": "^2.49.4",
     "bcrypt": "^5.1.1",
@@ -46,7 +47,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.22"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
