--- a/tourcapachica/.gitignore
+++ b/tourcapachica/.gitignore
@@ -2,7 +2,7 @@ node_modules
 # Keep environment variables out of version control
 .env
 # Testing
-/tests
-/coverage
-.nyc_output
-jest.config.js
+#/tests
+#/coverage
+#.nyc_output
+#jest.config.js
